Playing with scrolling/overflow issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,10 +29,10 @@ body {
 	.page-navigation {
 		flex-grow: 0;
 	}
-
+	
 	.page-content {
 		flex-grow: 1;
-		overflow: scroll;
+		overflow: auto;
 		position: relative;
 	}
 
